// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default options 1`] = `
"export interface IExampleCss {
  \\"bar-baz\\": string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;

exports[`localsConvention asIs 1`] = `
"export interface IExampleCss {
  \\"bar-baz\\": string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;

exports[`localsConvention camelCase 1`] = `
"export interface IExampleCss {
  \\"bar-baz\\": string;
  barBaz: string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;

exports[`with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
export interface IExampleCss {
  \\"bar-baz\\": string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;

exports[`with no formatter 1`] = `
"export interface IExampleCss {
  'bar-baz': string;
  'composed': string;
  'foo': string;
}

export const locals: IExampleCss;
export default locals;"
`;

exports[`with prettier 1`] = `
"export interface IExampleCss {
  \\"bar-baz\\": string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;

exports[`with sourcemap 1`] = `
"export interface IExampleCss {
  \\"bar-baz\\": string;
  composed: string;
  foo: string;
}

export const locals: IExampleCss;
export default locals;
"
`;
